tests/res/resolution/duplicate_declaration.say
say x = 1;
say x = 2; // error: 'x' already declared in this scope
